 . MenuItem: sending correct 'self' as argument (issue #19)
 . Misc: improved cocos2d icon and default image (issue #33)
 . TextureAtlas: Object to render indexed vertex arrays from 1 texture (issue #32) (*NEW_FEATURE*)
 . TileMapAtlas: Tile Map renderer (issue #35) (*NEW_FEATURE*)
 . TextureMgr: added removeAllTextures (issue #31)
 . Scheduler: retain arguments (issue #28)
 . Sprite: replaced FromFile with WithFile (issue #39) (*API_CHANGED*)

version 0.4.3 - 19-Sept-2008
 . Demo: AccelViewPort using code without the VirtualAccelerometer
 . Demo: TransitionDemo shows the 6 new transitions
 . Demo: Updated Icon.png & Default.png files
 . MenuItem: MenuItemFont are 3 pixels heigher.
 . Transitions: all Flip transitions have orientation: Left<->Right, Up<-->Down (6 new transitions)

version 0.4.2 - 10-Sept-2008
 . Action: FadeOut reverse fixed
 . Demo: AnchorDemo using back, restart, forward arrows
 . MenuItem: callback receives the sender as its argument (issue 14)
 . Particles: added initWithTotalParticles method.
 . Transitions: Fixed HUGE memory leak
 . Transitions: Timing fix. Slide transitions don't show "black" space

version 0.4.1 - 08-Sept-2008
 . Actions: commented an NSLog()
 . CocosNode: added removeAll (by Codemattic)
 . CocosNode: implementation file reorganized
 . CocosNode: added stopAction method (to remove just 1 one action)
 . CocosNode: sanity check when removing actions
 . Demo: ClickAndMove demo working again (issue 12)
 . Demo: SpritesDemo using back, restart & forward arrows
 . Demo: TransitionsDemo using back, restart & forward arrows
 . Demo: ParticleDemo using back, restart & forward arrows
 . Director: added eventsEnabled. You can enable/disabled touch events globally (eg: Transitions want this feature)
 . Director: implementation file reorganized
 . Director: drawScene renamed to mainLoop
 . Director: FPS are shown in the very bottom-left corner
 . Transitions: Added new ZoomFlipXTransition transition.